// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format() should format correctly with with string based indexes and an object param with JSX 1`] = `
<React.Fragment>
  
  1
   
  <span>
    text inside 2
  </span>
  
</React.Fragment>
`;

exports[`format() should format with element params 1`] = `
<React.Fragment>
  
  1
   
  <span>
    text inside
  </span>
  
</React.Fragment>
`;

exports[`format() should format with multiple element params 1`] = `
<React.Fragment>
  part of template 
  <div>
    some other text
  </div>
   
  <span>
    text inside
  </span>
  
</React.Fragment>
`;
